fix: remove CreateDuplicateJob
